changed openapi description version to 3.0.0
